Fix alignment of context menus
Auditors: @bsclifton

--- a/less/contextMenu.less
+++ b/less/contextMenu.less
@@ -21,7 +21,6 @@
   @usedUpChrome: @navbarHeight + @bookmarksToolbarWithFaviconsHeight;
   max-height: calc(~'100% - @{usedUpChrome}');
   overflow: auto;
-  padding: 4px 20px;
   position: absolute;
   z-index: 350;
   -webkit-user-select: none;
